--- a/K5_Numpy.ipynb
+++ b/K5_Numpy.ipynb
@@ -788,6 +788,7 @@
     "L = np.array([3,1,4,1,5,9,2,6])\n",
     "np.sort(L)\n",
     "i = np.argsort(L) # 정렬된 인덱스만\n",
+    "# original index before sorting\n",
     "print(i)\n",
     "L[i] #인덱스로 정렬"
    ]
